manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: schedule
      tier: backend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: schedule
        tier: backend
        track: stable
    spec:
      containers:
        - name: schedule
          image: bobrja/pink-team:1
          ports:
            - name: port-backend
              containerPort: 8080
