manifest/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: schedule
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: schedule
        tier: frontend
        track: stable
    spec:
      containers:
        - name: schedule-front
          imagePullPolicy: Always
          image: bobrja/frontend:1
          ports:
            - name: nginx-port 
              containerPort: 80
