manifest/mongo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: schedule
      tier: mongo
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: schedule
        tier: mongo
        track: stable
    spec:
      containers:
        - name: mongo
          image: mongo:4.4.6
          ports:
            - name: mongo
              containerPort: 27017
...
