manifest/poda-for-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: temporary-pod
  namespace: connect 
spec:
  containers:
  - name: test-container
    image: busybox
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
