manifest/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: schedule
      tier: redis
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: schedule
        tier: redis
        track: stable
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - name: redis
              containerPort: 6379
