manifest/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: schedule
spec:
  selector:
    app: schedule
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
...
