manifest/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: connect
spec:
  selector:
    matchLabels:
      app: schedule
      tier: backend
      env: dev
  replicas: 1
  template:
    metadata:
      labels:
        app: schedule
        tier: backend
        env: dev
    spec:
      containers:
      - name: schedule-back
        image: mneteli/pink:first
        ports:
          - name: backend-port
            containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: connect
spec:
  selector:
    app: schedule
    tier: backend
    env: dev
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
...
