manifest/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: connect
spec:
  selector:
    matchLabels:
      app: schedule-frontend
      tier: frontend
      env: dev
  replicas: 1
  template:
    metadata:
      labels:
        app: schedule-frontend
        tier: frontend
        env: dev
    spec:
      containers:
        - name: schedule-web
          imagePullPolicy: Always
          image: mneteli/front:latest
          ports:
            - name: nginx-port 
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: connect
spec:
  selector:
    app: schedule-frontend
    tier: frontend
    env: dev
  ports:
  - protocol: "TCP"
    port: 3000
    targetPort: 3000

...
