manifest/mongo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: schedule
    tier: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
...
