manifest/mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule
      tier: mongo
      env: dev
  template:
    metadata:
      labels:
        app: schedule
        tier: mongo
        env: dev
    spec:
      containers:
      - name: mongo
        image: "mongo:jammy"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: schedule
    tier: mongo
    env: dev
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
