manifest/postgres-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule
      tier: postgres
      track: stable
  template:
    metadata:
      labels:
        app: schedule
        tier: postgres
        track: stable
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /docker-entrypoint-initdb.d
            name: mydir
          - mountPath: /docker-entrypoint-initdb.d/init.sql
            name: myfile
      volumes:
      - name: mydir
        hostPath:
          path: /home/bobrja/class-schedule-backend/manifest/db
          type: DirectoryOrCreate
      - name: myfile
        hostPath:
          path: /home/bobrja/class-schedule-backend/manifest/db/init.sql
          type: FileOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: schedule
    tier: postgres
    track: stable
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
