manifest/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
      app: schedule
      tier: postgres
      track: stable
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
...
