manifest/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule
      tier: postgres
      env: dev
  template:
    metadata:
      labels:
        app: schedule
        tier: postgres
        env: dev
    spec:
      containers:
      - name: postgres
        image: "postgres:15.1-alpine"
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: connect
spec:
  selector:
    app: schedule
    tier: postgres
    env: dev
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
...
