manifest/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule
      tier: redis
      env: dev
  template:
    metadata:
      labels:
        app: schedule
        tier: redis
        env: dev
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: schedule
    tier: redis
    env: dev
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
...
