manifest/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  
spec:
  ports:
  - name: tomcat-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: schedule-backend
    
  type: NodePort
