manifest/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: schedule-network
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: schedule
      tier: postgres
      track: stable
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.36.0.0/16
        - namespaceSelector:
            matchLabels:
              app: schedule
              tier: postgres
              track: stable
        - podSelector:
            matchLabels:
              app: schedule
              tier: postgres
              track: stable
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port: 5978
